--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-
-  <body>
+  <head>
+    <title>
+      Dis Is Boss
+    </title>
+  </head>
+      <body>
     Hello there, awesome person! 
   </body>
 
 </html>
+
+   
